--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   flutter_color_plugin: ^0.0.2
+  # 打开第三方
+  url_launcher: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +48,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - images/coin_compared_disabled.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
